fixed on-the-fly bugs / better fps display

--- a/SimpleStarcraft/SimpleStarcraft.vcxproj
+++ b/SimpleStarcraft/SimpleStarcraft.vcxproj
@@ -152,12 +152,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="entity.cpp" />
+    <ClCompile Include="game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="unit.cpp" />
     <ClCompile Include="vector.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="constants.h" />
+    <ClInclude Include="entity.h" />
+    <ClInclude Include="game.h" />
+    <ClInclude Include="gameObject.h" />
     <ClInclude Include="unit.h" />
     <ClInclude Include="vector.h" />
   </ItemGroup>
