--- a/SimpleStarcraft/SimpleStarcraft.vcxproj
+++ b/SimpleStarcraft/SimpleStarcraft.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="unit.cpp" />
     <ClCompile Include="vector.cpp" />
+    <ClCompile Include="zealot.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="constants.h" />
@@ -165,6 +166,7 @@
     <ClInclude Include="gameobject.h" />
     <ClInclude Include="unit.h" />
     <ClInclude Include="vector.h" />
+    <ClInclude Include="zealot.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
