--- a/SimpleStarcraft/SimpleStarcraft.vcxproj
+++ b/SimpleStarcraft/SimpleStarcraft.vcxproj
@@ -157,7 +157,9 @@
     <ClCompile Include="entitybase.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="nexus.cpp" />
     <ClCompile Include="rectangle.cpp" />
+    <ClCompile Include="structure.cpp" />
     <ClCompile Include="unit.cpp" />
     <ClCompile Include="vector.cpp" />
     <ClCompile Include="window.cpp" />
@@ -169,7 +171,9 @@
     <ClInclude Include="entitybase.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="gameobject.h" />
+    <ClInclude Include="nexus.h" />
     <ClInclude Include="rectangle.h" />
+    <ClInclude Include="structure.h" />
     <ClInclude Include="unit.h" />
     <ClInclude Include="vector.h" />
     <ClInclude Include="window.h" />
